# reizai-server

./: .gitignore  Cargo.toml  README.md
common/: Cargo.toml
common/src/: http.rs
common/src/structs/: mod.rs
common/src/structs/twitch/: mod.rs
database/: Cargo.toml
database/src/: error.rs  lib.rs
database/src/twitch/: auth.rs
redis_client/: Cargo.toml
redis_client/src/: lib.rs
services/: Cargo.toml
services/src/: error.rs  lib.rs
services/src/common/: mod.rs  testing_routes.rs
services/src/twitch/: auth.rs  jwt.rs  mod.rs
sql/: create_tables.sql
src/: main.rs
twitch/: Cargo.toml
twitch/src/: lib.rs
twitch/src/api/: api_auth.rs  api_request.rs  api_users.rs  error.rs  mod.rs
