[package]
name = "reizai-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "services",
    "database",
    "redis_client",
    "twitch",
    "common",
]

[workspace.dependencies]
dotenvy = "0.15.7"
anyhow = "1.0.75"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
axum = "0.6.20"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "chrono" ] }
once_cell = "1.18.0"
database = { path = "./database" }
common = { path = "./common" }
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies]
dotenvy = { workspace = true }
services = { path = "./services" }
database = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
