[package]
name = "common"
version = "0.1.0"
edition = "2021"
description = "crate containing common modules, currently just used to hold a http client."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
