[package]
name = "redis_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.23.0", features = ["tokio-comp", "json", "aio", "connection-manager"] }
once_cell = { workspace = true }
anyhow = { workspace = true }
