[package]
name = "services"
version = "0.1.0"
edition = "2021"
description = "Axum based API services"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace", "cors"] }
tracing = "0.1.37"
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
database = { workspace = true }
twitch = { workspace = true }
once_cell = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = "8.3.0"
log = { workspace = true }
